Fix badge vertical alignment in headers. :nut_and_bolt:
'middle' works strangely with linked and unliked images. 'baseline'
works as it should, provided line-height is consistent.

--- a/stylesheets/content/_headers.scss
+++ b/stylesheets/content/_headers.scss
@@ -4,7 +4,9 @@
 
 %badge-container {
   /* badges */
-  > * { vertical-align: middle; }
+  * {
+    vertical-align: baseline;
+  }
   img {
     border: 0;
     box-shadow: none;
